fix: align split caret size with Bootstrap's default
Changed .bs-dropdown-caret::after to use Bootstrap's standard caret
values (.3em borders, .255em margins) instead of custom .345em values
to ensure consistent caret sizes between split and non-split dropdowns.

--- a/src/scss/_enhanced-dropdowns.scss
+++ b/src/scss/_enhanced-dropdowns.scss
@@ -61,14 +61,13 @@
 
 .bs-dropdown-caret::after {
     display: inline-block;
-    margin-left: -0.1em;
-    margin-right: 0.1em;
+    margin-left: .255em;
     vertical-align: .255em;
     content: "";
-    border-top: .345em solid;
-    border-right: .345em solid transparent;
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
     border-bottom: 0;
-    border-left: .345em solid transparent;
+    border-left: .3em solid transparent;
     transition: transform 0.2s ease-in-out;
 }
 
